Upgraded to assets 0.2.42

--- a/css/etalab-mediawiki.css
+++ b/css/etalab-mediawiki.css
@@ -6888,12 +6888,11 @@ ul.card-list .card.card-slim .card-body {
 @media (min-width: 768px) {
   .call-to-action {
     position: relative;
-    top: 30px;
+    top: 77px;
   }
 }
 @media (min-width: 768px) and (min-width: 992px) {
   .call-to-action {
-    top: 65px;
     left: 50px;
   }
 }
@@ -6901,14 +6900,26 @@ ul.card-list .card.card-slim .card-body {
   color: white;
   font-style: italic;
   font-family: 'Raleway', sans-serif;
-  font-size: 36px;
-  line-height: 1.2em;
+  font-size: 26px;
+  line-height: 1.1em;
+}
+@media (min-width: 500px) {
+  .call-to-action h2 {
+    max-width: 390px;
+  }
+}
+@media (min-width: 992px) {
+  .call-to-action h2 {
+    max-width: 570px;
+    font-size: 36px;
+    line-height: 1.2em;
+  }
 }
 @media (max-width: 500px) {
   .call-to-action h2 {
     font-size: 18px;
-    line-height: 1em;
     margin: 10px 0;
+    max-width: 280px;
   }
 }
 .search_sidebar {
@@ -7113,31 +7124,31 @@ ul.card-list .card.card-slim .card-body {
   margin-top: -1px;
 }
 .topic-1 {
-  background-color: #905d4e !important;
+  background-color: #1b775d !important;
 }
 .topic-2 {
-  background-color: #EE7836 !important;
+  background-color: #905d4e !important;
 }
 .topic-3 {
-  background-color: #6a4570 !important;
+  background-color: #EE7836 !important;
 }
 .topic-4 {
-  background-color: #fc3f3f !important;
+  background-color: #6a4570 !important;
 }
 .topic-5 {
-  background-color: #9BBB45 !important;
+  background-color: #fc3f3f !important;
 }
 .topic-6 {
-  background-color: #46b2a4 !important;
+  background-color: #9BBB45 !important;
 }
 .topic-7 {
-  background-color: #8B4F78 !important;
+  background-color: #46b2a4 !important;
 }
 .topic-8 {
-  background-color: #134d77 !important;
+  background-color: #8B4F78 !important;
 }
 .topic-9 {
-  background-color: #1b775d !important;
+  background-color: #134d77 !important;
 }
 body {
   color: #373c42;
